src/global.css
:root {
  --section-background: #FFF;
  --text: #292929;
  --text-2: #757575;
  --text-2-em: #404040;
  --button-bg: #292929;
  --button-text: var(--section-background);
  --button-bg-hover: #FF672B;
  --button-text-hover: var(--section-background);
  --button-outline-hover: var(--button-bg);
  --focus-outline: #FF932B;

  --anim-delay: 300ms;
  --anim-duration: 0.75;
}

@media (prefers-color-scheme: dark) {
  :root {
    --section-background: #292929;
    --text: #EEE;
    --text-2: #919191;
    --text-2-em: #BBB;
    --button-bg: #EEE;
    --button-text: #292929;
    --button-bg-hover: #FF672B;
    --button-text-hover: var(--button-bg);
    --button-outline-hover: var(--button-bg);
    --focus-outline: #FF932B;
  }

  #logo-dark {
    display: none;
  }

  #logo-light {
    display: initial;
  }
}

@font-face {
  font-family: "CoreSans";
  font-weight: bold;
  src: url("/Core\ Sans\ CR\ 75\ ExtraBold.ttf") format("opentype")
}

@font-face {
  font-family: "CoreSans";
  font-weight: normal;
  src: url("/Core\ Sans\ CR\ 55\ Medium.ttf") format("opentype")
}

body {
  --content-width: 800px;
  --se-padding: 1rem;
  --se-gap: 2rem;

  font-family: "CoreSans", Tahoma, Geneva, Verdana, sans-serif;
  width: 100%;
  min-height: 100%;
  min-height: 100vh;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0;
  padding: var(--se-gap);
  box-sizing: border-box;
  background-image: linear-gradient(90deg, #FF672B, #FFA92B);
}

:is(header, main, footer) {
  width: var(--content-width);
  background-color: var(--section-background);
  color: var(--text);
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  padding: var(--se-padding);
  gap: var(--se-padding);
  border-radius: 0.5rem;
  contain: content;
  box-shadow: 0 5px 10px rgba(0,0,0,0.5);
}

h1, h2, h3, h4, h5 {
  font-weight: bold;
  margin: 0;
}

h1 {
  font-size: 40px;
}

h2 {
  font-size: 26px;
}

h3 {
  margin-top: 0.75em;
}

p {
  margin-top: 0;
  margin-bottom: 1em;
}

a {
  color: var(--focus-outline);
  transition: all 250ms cubic-bezier(0,.65,.5,1);
  text-decoration: none;
  font-weight: bold;
  outline: 10px solid transparent;
  outline-offset: 10px;
  border-radius: 0.1em;
  text-decoration: underline;
}

a:hover {
  color: var(--text); 
}

a:is(:focus, :focus-visible) {
  color: var(--text);
  outline: 3px solid var(--focus-outline);
  outline-offset: 3px;
}

